--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -1,24 +1,83 @@
 #content-1 {
-    background-color: $dark-blue;
-    display: flex;
-    justify-content: center;
-    min-height: 40vh;
-    align-items: center;
+    background: rgb(16, 16, 16);
+    background: linear-gradient(90deg, rgb(0, 0, 30) 0%, rgba(0, 0, 0, 1) 100%);
+    display: grid;
+    grid-template-columns: 50% 50%;
+    min-height: 65vh;
 
-    div {
+    .image {
+        display: flex;
+        img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            filter: brightness(0.75);
+            transition: all 0.2s;
+
+            &:hover {
+                filter: brightness(0.9);
+            }
+        }
+    }
+
+    .content-box {
         display: flex;
         flex-direction: column;
-        gap: 2em;
-        h2 {
-            font-family: $primary-font;
-            color: white;
-            text-align: center;
-        }
+        justify-content: center;
+        align-items: center;
 
-        p {
-            font-family: 'Montserrat';
-            font-weight: 500;
-            color: white;
+        .container-content {
+            display: flex;
+            flex-direction: column;
+            width: 80%;
+
+            h2 {
+                font-family: $primary-font;
+                color: #fff;
+                font-size: 2.4em;
+                font-weight: 500;
+                width: 80%;
+            }
+
+            p {
+                color: #fff;
+                margin-top: 1em;
+                font-family: "montserrat";
+                font-size: 1.05em;
+                line-height: 1.4em;
+            }
+
+            button {
+                margin-top: 2.5em;
+                padding: 0.75em 2em;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 780px) {
+    #content-1 {
+        display: flex;
+        flex-direction: column;
+        background: rgb(16, 16, 16);
+
+        .content-box {
+            .container-content {
+                width: 90%;
+                h2 {
+                    font-size: 1.5em;
+                    margin-top: 1em;
+                }
+
+                p {
+                    font-size: 1em;
+                }
+
+                button {
+                    margin-top: 1em;
+                    margin-bottom: 1.5em;
+                }
+            }
         }
     }
 }
