--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,6 +3,10 @@
 @import "./theme";
 @import "./header";
 @import "./content";
+@import "./features";
+@import "./footer";
+@import "./home";
+@import "./mediaqueries";
 
 * {
     margin: 0;
@@ -21,45 +25,50 @@ body {
     }
 }
 
-#home {
-    width: 100%;
-    height: 100vh;
+#message {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    margin: 0 1em 1em 0;
+    border-radius: 0.75rem 0.75rem 0 0.75rem;
+    z-index: 20;
+    background-color: #fff;
+    padding: 0.5em 1.5em 1em 1.5em;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    visibility: hidden;
+    box-shadow: 2px 8px 10px rgba(0, 0, 0, 0.226);
 
-    video {
-        filter: brightness(0.5);
-        position: absolute;
-        right: 0;
-        top: 0;
-        z-index: -1;
-        width: auto;
-        height: 100%;
-    }
-
-    .hero-container {
-        z-index: 100;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 3em;
-
-        h1 {
-            font-family: $primary-font;
-            font-size: 3.5rem;
-            width: 70%;
-            text-align: center;
-            color: #fff;
-            font-weight: 600;
+        &.show-message {
+            visibility: visible;
         }
 
-        .btns {
-            display: flex;
-            flex-direction: row;
-            gap: 2em;
+    .message-container {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        font-family: $primary-font;
+        position: relative;
+        padding-top: 1.5em;
+
+        #close {
+            position: absolute;
+            top: 0;
+            right: 0;
+            font-size: 1.2em;
+            color: $dark-blue;
+            cursor: pointer;
+        }
+
+        span {
+            font-weight: 500;
+            color: $dark-blue;
+        }
+
+        #phone {
+            color: $accent-blue;
+            filter: brightness(0.5);
         }
     }
 }
