--- a/styles/_features.scss
+++ b/styles/_features.scss
@@ -49,6 +49,11 @@
                 object-fit: cover;
                 width: 100%;
                 height: 100%;
+                transition: 0.2s all;
+
+                &:hover {
+                    filter: brightness(0.9);
+                }
             }
         }
 
